<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType = "fitStart"
    android:background="@drawable/gradient_login_background"
    android:paddingLeft="33dp"
    android:paddingTop="33dp"
    android:paddingRight="33dp"
    android:paddingBottom="60dp">

    <ImageView
        android:id="@+id/loginPageImage"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_test" />

    <!--<TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPageImage"
        android:layout_marginTop="30sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />-->

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPageImage"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/email"
        android:textColor="@color/white_smoke"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:backgroundTint="@color/light_slate_gray"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email_example"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textColorHint="@color/light_slate_gray" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/loginEmail"
        android:fontFamily="@font/montserrat"
        android:text="@string/password"
        android:textColor="@color/white_smoke"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordText"
        android:layout_alignEnd="@+id/loginEmail"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:backgroundTint="@color/light_slate_gray"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password_lower_case"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/light_slate_gray" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@+id/loginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60sp"
        android:background="@drawable/custom_login_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white_smoke"
        android:textSize="20sp" />

    <!--<TextView
        android:id="@+id/dontHaveAnAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/montserrat"
        android:paddingBottom="30dp"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/light_slate_gray"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />-->

</RelativeLayout>